--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span class="info">My Name is</span><br>
             <span class="brand myname tracking-in-expand-fwd">Yash Boldhane</span><br>
             <span class="info">I am a <br></span><span class="designation"> Full Stack Developer</span><br>
-            <button href="demo.pdf" class="rsmbtn">RESUME</button>
+            <button class="rsmbtn"><a href="Yash Boldhane Professional Resume.pdf">RESUME</a></button>
         </div>
     </section>
     <section id="about" class="portfolio-section about-section">
