--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ I made it using HTML CSS & Vanilla JavaScript. No external JavaScript libraries 
       <!-- social media icons -->
       <div class="social-icons mt-4">
           <a href="https://www.facebook.com/yash.boldhane.7?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/yash_boldhane?igsh=MTR5MWc0bHRwMjB5aw==" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="instagram QR.png" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://www.linkedin.com/in/yash-boldhane-295069248?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
